# ImagineM2

HAI911I/TP2/: Skeleton.h  main.cpp
HAI911I/Texture 3D/: Makefile  TextureDockWidget.cpp  TextureDockWidget.h  TextureViewer.cpp  TextureViewer.h  Window.cpp  texture3D
HAI911I/arap_glad_glfw/: CMakeLists.txt  README.md  gmini.cpp  readmeThiery.txt  tpArap
HAI911I/arap_glad_glfw/src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  OpenGL.h  RectangleSelectionTool.h  Scene.h  SphereSelectionTool.h
HAI917I/: String.txt
HAI917I/TP_Dual_Contour/: tp  tp.cpp  tp2.cpp
HAI917I/TP_ICP/: readmeBoubek.txt  readmeThiery.txt  tp  tp.cpp
HAI917I/TP_MLS/: tp  tp.cpp
HAI918I/TP1/: bb.pgm  blur.cpp  crypted.pgm  crypted1.pgm  crypted2.pgm  dec  dechiffre.cpp  dechiffre.pgm  dechiffreBenj.pgm  dechiffreManu.pgm  dechiffreManu2.pgm  dechiffreMicka.pgm  hamster.pgm  hamster.ppm  histoC  histo_couleur.cpp  moi.pgm  moiC.pgm  moiI.pgm  mystere.pgm  ok.pgm  perm  permInv  permut_inv.cpp  permutation.cpp  profil  profil.cpp  psnr.cpp  seuilC  seuil_auto  seuil_couleur.cpp  son  sub  subD  substit.cpp  substitD.cpp  test_gray_s2  test_grey.cpp  test_grey_auto.cpp  test_grey_s  (+2 more)
HAI918I/TP2/: AES.h  CBCDec_Bruit.pgm  CFB_DecBruit.pgm  CTRDec_Bruit.pgm  LuigiCBC.pgm  LuigiCBC_Bruit.pgm  LuigiCFB.pgm  LuigiCFB_Bruit.pgm  LuigiCTR.pgm  LuigiDec_Bruit.pgm  LuigiECB.pgm  LuigiOFB.pgm  LuigiOFB_Bruit.pgm  LuigiOFC.pgm  OFBDec.pgm  OFB_Dec_Bruit.pgm  cbc  cbc.cpp  cbcD  cbcD.cpp  cfb  cfb.cpp  cfbD  cfbD.cpp  ctr  ctr.cpp  diff  diffCBC.pgm  diffCBCDec.pgm  diffCFB.pgm  diffCFBDec.pgm  ecb  ecbD  (+19 more)
(+498 files in other folders)
